<resources>
    <string name="app_name">Uza</string>
    <string name="post_item">Post Item</string>
    <string name="add_photo">Add Photo</string>
    <string name="description">Description</string>
    <string name="price_ksh">Price Ksh</string>
    <string name="title">Title</string>
    <string name="available">Available</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="type_your_message">Type your message ...</string>
    <string name="username">Name</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="userRegister">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="alreadyRegistered">Already have an account?</string>
    <string name="userLogin">Login</string>
    <string name="newUser">Don\'t have an account?</string>
    <string name="verifyMail">Please verify your email first</string>
    <string name="emailEmptyError">You have to provide an email address!</string>
    <string name="emailInvalidError">Please enter a valid email address!</string>
    <string name="passwordEmptyError">Password cannot be empty!</string>
    <string name="nameBlankError">Name cannot be blank!</string>
    <string name="registrationFailedMessage">Registration failed. Try again later</string>
    <string name="logout">Logout</string>
    <string name="app_logo">App Logo</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="signInFailed">Sign-in failed</string>
    <string name="welcome_text">Welcome %s</string>
    <string name="welcome">Welcome</string>
    <string name="logging_in">Logging in…</string>
    <string name="signing_up">Signing up…</string>
    <string name="okay">Ok</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_shops">Shops</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_sell">Sell Product</string>
    <string name="menu_request">Request</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uza_messaging">Uza messaging</string>
    <string name="connecting">Connecting ...</string>
    <string name="no_chats_message">There are no chats here yet. \n\n To start a chat, \n select the message option under a product</string>
    <string name="login_error_occured">Sorry. A login error occurred</string>
    <string name="something_went_wrong">Sorry, Something went wrong</string>
    <string name="shops_title">Select a product from below</string>
    <string name="name">Name</string>
    <string name="price">00.00 Ksh</string>
<!--    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>-->
<!--    <string name="available">Not Available</string>-->
    <string name="menu_products">Products</string>
    <string name="buy">Buy</string>
    <string name="failed_to_prepare_chat">Failed to prepare chat. Try again later</string>
    <string name="chat_with_seller">Chat with seller</string>
    <string name="preparing_chat">Preparing Chat ...</string>
    <string name="verifyMailToContinue">Please verify your email to continue. \nCheck your email for a verification link</string>
</resources>