<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products"
            android:title="@string/menu_products" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/menu_categories" />


        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_messages"
            android:title="@string/menu_messages" />

        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_sell"
            android:title="@string/menu_sell" />

        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_request"
            android:title="@string/menu_request" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>