<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_shops">

    <fragment
        android:id="@+id/nav_shops"
        android:name="com.uza.fragments.ShopsFragment"
        android:label="@string/menu_shops"
        tools:layout="@layout/fragment_shops" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.uza.fragments.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />


    <fragment
        android:id="@+id/nav_messages"
        android:name="com.uza.fragments.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_sell"
        android:name="com.uza.fragments.SellFragment"
        android:label="@string/menu_sell"
        tools:layout="@layout/fragment_sell" />

    <fragment
        android:id="@+id/nav_request"
        android:name="com.uza.fragments.RequestFragment"
        android:label="@string/menu_request"
        tools:layout="@layout/fragment_request" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.uza.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>