<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/shop_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/name"
            android:id="@+id/name"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/price"
            android:id="@+id/price"/>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="100dp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        android:text="@string/available"
        android:id="@+id/availability"
        android:padding="5dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:textSize="15sp"
        android:gravity="center"/>

</LinearLayout>